# anki-llm

./: .gitignore  .npmignore  .prettierignore  .workmux.yaml  ANKI_CONNECT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  anki_connect_demo.py  eslint.config.js  export_glossika_deck.py  inspect_fields.py  justfile  package.json  pnpm-lock.yaml  tsconfig.json  update_note.py
.github/workflows/: release.yml
docker/: Dockerfile  entrypoint.sh
docs/: generate-plan.md
examples/: generate_vocab.md  generate_vocab_with_quality_check.md  japanese_contextual.md  key_vocabulary.md
scripts/: install.sh  release.py
src/: anki-connect.ts  anki-schema.ts  app.rs  batch-ai-process-csv.ts  batch-ai-process.ts  cli.rs  cli.ts  config-manager.ts  config.ts  docs.rs  export-deck.ts  export-glossika-deck.ts  import-deck.ts  import-glossika-deck.ts  lib.rs  main.rs  spinner.rs  style.rs  types.ts  update.rs
src/anki/: client.rs  command.rs  error.rs  mod.rs  schema.rs
src/audio/: mod.rs  player.rs
src/batch/: command_process_deck.rs  command_process_file.rs  controller.rs  deck_mode.rs  engine.rs  error.rs  events.rs  file_mode.rs  mod.rs  plain.rs  preview.rs  process_row.rs  report.rs  session.rs
src/batch-processing/: cli.ts  command-handler.ts  core-processor.ts  data-io.ts  direct-processor.ts  llm.service.ts  llm.ts  logger.ts  processing-options.ts  processor.ts  reporting.ts  shared-processing.ts  types.ts  util.ts
tests/: anki_integration.rs  cli_test.rs
typescript/: .prettierignore  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
(+172 files in other folders)
