[package]
name = "anki-llm"
version = "2.0.3"
edition = "2024"
authors = ["Raine Virta"]
description = "A command-line interface for bulk-processing Anki flashcards with LLMs"
readme = "README.md"
license = "MIT"
repository = "https://github.com/raine/anki-llm"
homepage = "https://github.com/raine/anki-llm"
keywords = ["anki", "llm", "flashcards", "cli", "openai"]
categories = ["command-line-utilities"]
include = ["src/**/*", "tests/**/*", "README.md", "LICENSE", "CHANGELOG.md", "ANKI_CONNECT.md"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
inquire = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"

# HTTP
ureq = { version = "3", features = ["json", "rustls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Data structures
indexmap = { version = "2", features = ["serde"] }
regex = "1"

# Files
tempfile = "3"
home = "0.5"

# Signal handling
ctrlc = "3.4"

# Clipboard
arboard = "3"

# Markdown / HTML
pulldown-cmark = "0.12"
ammonia = "4"

# JSON repair
jsonrepair = "0.1"

# Terminal UI
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"

[features]
integration = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3.4.0"
